# intercept-plugin-template

./: .gitignore  CMakeLists.txt
addons/main/: config.cpp
src/: CMakeLists.txt
